Fix pixelated images

--- a/latex_docu/04/doc.tex
+++ b/latex_docu/04/doc.tex
@@ -66,7 +66,7 @@ additional self-healing, should these critical components crash.
 
 \begin{figure}[htbp]
   \centering
-  \includegraphics[width=0.80\textwidth]{images/Kubernetes.png}
+  \includegraphics[scale=0.5]{images/Kubernetes.png}
   \caption{Kubernetes architecture diagram \cite{WikiCommons:KubernetesArchitecture}}
 \end{figure}
 
