--- a/latex_docu/07/doc.tex
+++ b/latex_docu/07/doc.tex
@@ -149,7 +149,7 @@ nodes, with two replicas per index.
 
 \begin{figure}[htbp]
 	\centering
-	\includegraphics[width=0.7\textwidth]{images/07_database_architecture_elastic.png}
+	\includegraphics[scale=0.6]{images/07_database_architecture_elastic.png}
 	\caption{OpenData Database Architecture}
 	\label{fig:elastic-architecture}
 \end{figure}
