--- a/latex_docu/01/doc.tex
+++ b/latex_docu/01/doc.tex
@@ -51,9 +51,6 @@ Further, the definition encompasses the following aspects:
 \end{itemize}
 \end{quote}
 
-\subsubsection{Time series data \& non-static sensor environmental
-data}\label{time-series-data-non-static-sensor-environmental-data}
-
 So how does this ``open data'' differ from the data we're interested in?
 The simple answer is the lack of the time dimension in existing data.
 The large majority of open data out there today is static. Environmental
@@ -112,7 +109,7 @@ around building a prototype which provides:
   and a flexible querying interface for accessing the data.
 \end{itemize}
 
-With this we aim to create a tool that generates economic and social
+We therefore aim to create a tool that generates economic and social
 value through new and creative ``layering'' of data.
 
 \subsubsection{Building Blocks}\label{building-blocks}
