--- a/latex_docu/05a/doc.tex
+++ b/latex_docu/05a/doc.tex
@@ -1,7 +1,11 @@
 \section{Units of Measurement}\label{sec:units}
 
-\textbf{Authorship:} Written by Andres
+\vspace{8 pt}
+\textbf{Authorship:} Written by Andres Ardila
 \vspace{10 pt}
+
+
+\subsection{Overview}\label{overview}
 
 Since the same physical quantity can be represented in different units
 of measurement ---both meters and miles represent lengths, for
