--- a/latex_docu/07/doc.tex
+++ b/latex_docu/07/doc.tex
@@ -1,9 +1,8 @@
 \section{Database}\label{sec:database}
 
-\textbf{Authorship: } Written by Nico Tasche\\
-\emph{Minor proofreading \& edited by Andres Ardila} \\
-
-\vspace*{4mm}
+\textbf{Authorship:} Written by Nico Tasche\\
+\emph{Minor proofreading \& editing by Andres Ardila}
+\vspace{10 pt}
 
 \subsection{Overview}\label{overview}
 
@@ -267,7 +266,7 @@ different replica. This can be flexible in- or decreased later on.
 
 \begin{figure}[htbp]
 	\centering
-	\includegraphics[width=0.8\textwidth]{images/07_database_architecture.png}
+	\includegraphics[width=0.75\textwidth]{images/07_database_architecture.png}
 	\caption{OpenData Database Architecture}
 	\label{fig:db-architecture}
 \end{figure}
