--- a/latex_docu/08/doc.tex
+++ b/latex_docu/08/doc.tex
@@ -1,9 +1,9 @@
 \section{Data Source Metadata Management System}\label{sec:metadata}
 
-\textbf{Authoriship: } Written by Paul Wille\\
-\emph{Proofread \& edited by Andres} \\
-
-\vspace*{4mm}
+\textbf{Authoriship:} \\
+Written by Paul Wille \\
+\emph{Proofread \& edited by Andres Ardila}
+\vspace{12 pt}
 
 In this chapter we will discuss the component responsible for managing
 metadata about the data sources which are imported to the system. We
@@ -176,8 +176,7 @@ The response looks like as follows (note that the const
 {
   "\$schema": "http://json-schema.org/schema#",
   "title": "Data Source",
-  "description": "A Data Source for Open Sensor Data from the CP project \\
-									at TU Berlin. ",
+  "description": "An open sensor data source",
   "type": "object",
   "properties": {
     "source_id": {"const": "source_slug"},
