--- a/latex_docu/appendix/doc.tex
+++ b/latex_docu/appendix/doc.tex
@@ -2,19 +2,20 @@
 
 \begin{longtable}{lllll}
 \toprule
- No. & Name  & Measurand(s) & Data Format & URL \tabularnewline
+ No. & Name  & Measurand(s) & Data Format & Author \tabularnewline
 \midrule
 \endhead
- 1 & Weather Data Stuttgart & Humidity, Temperature, & CSV & luftdaten.info \tabularnewline
-   & & Pressure & & \\
- 2 & Luftdaten Brandenburg & O\textsubscript{3}, NO, NO\textsubscript{2}, PM10, & XLS & luftdaten.brandenburg.de \tabularnewline
+ 1 & Weather Data Stuttgart & Humidity, Temperature, & CSV & Jawid/Rohulla \tabularnewline
+   & & Pressure & & \tabularnewline
+ 2 & Luftdaten Brandenburg & O\textsubscript{3}, NO, NO\textsubscript{2}, PM10, & XLS & Jawid/Rohulla \tabularnewline
 	 & & PM2.5, SO\textsubscript{2}, CO & & \tabularnewline
- 3 & Umweltbundesamt & PM10, SO\textsubscript{2}, O\textsubscript{3}, NO\textsubscript{2}, CO & CSV &  umweltbundesamt.de \tabularnewline
- 4 & Pegel Online & Water Level & REST, & pegelonline.wsv.de \tabularnewline
+ 3 & Umweltbundesamt & PM10, SO\textsubscript{2}, O\textsubscript{3}, NO\textsubscript{2}, CO & CSV &  Jawid/Rohulla  \tabularnewline
+ 4 & Pegel Online & Water Level & REST, & Jawid/Rohulla  \tabularnewline
    & Water Level & & SOAP & \tabularnewline
- 5 & BLUME & N\textsubscript{2}O, SO\textsubscript{2}, PM10, & HTML & https://www.berlin.de \tabularnewline
+ 5 & BLUME & N\textsubscript{2}O, SO\textsubscript{2}, PM10, & HTML & Andres \tabularnewline
 	 & & C\textsubscript{6}H\textsubscript{6}, CO, O\textsubscript{3} & & \tabularnewline
- 6 & BFS UV Index & UV Index & HTML & http://www.bfs.de\tabularnewline
+ 6 & BFS UV Index & UV Index & HTML & Oliver\tabularnewline
+ 7 & NOAA GHCN & Weather & DSV & Andres \tabularnewline
 \bottomrule
 \end{longtable}
 
