--- a/latex_docu/documentation.tex
+++ b/latex_docu/documentation.tex
@@ -19,7 +19,7 @@
 \providecommand{\tightlist}{%
   \setlength{\itemsep}{0pt}\setlength{\parskip}{0pt}}
 
-%% Change style for list label	
+%% Change style for list label
 \renewcommand{\labelitemi}{-}
 \renewcommand{\labelitemii}{-}
 \renewcommand{\labelitemiii}{$\bullet$}
@@ -73,9 +73,17 @@ firstname.lastname@campus.tu-berlin.de
 \vspace*{1mm}
 
 \begin{abstract}
-Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.   
-
-Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu feugiat nulla facilisis at vero.
+Despite a significant push in the past decade to liberate data, the world of
+static environmental "open data" is giving way to the new wave of
+data available from IoT devices. However, despite the large amounts of potentially
+useful data that's available, a platform on which enthusiast and organizations
+alike can donate and liberate their data, and where data scientists can take advantage
+of a way to query and layer all these data in new and unexpected ways is still an
+unrealized dream. With this project, we look at the current state of affairs of
+such static open data platforms, inquire about why they're no longer serving their
+promise of openness and failing in their usability (and therefore usefulness),
+and introduce an early prototype for what such a system would look like if it
+were built with cutting edge cloud technologies.
 \end{abstract}
 \newpage
 
@@ -99,20 +107,20 @@ Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie co
 %% Content %%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%
 
-\input{01/doc.tex}
-\input{01a/doc.tex}
-\input{02/doc.tex}
-\input{03/doc.tex}
-\input{04/doc.tex}
-\input{05/doc.tex}
-\input{05a/doc.tex}
-\input{06/doc.tex}
-\input{07/doc.tex}
-\input{08/doc.tex}
+\input{01/doc.tex}\clearpage
+\input{01a/doc.tex}\clearpage
+\input{02/doc.tex}\clearpage
+\input{03/doc.tex}\clearpage
+\input{04/doc.tex}\clearpage
+\input{05/doc.tex}\clearpage
+\input{05a/doc.tex}\clearpage
+\input{06/doc.tex}\clearpage
+\input{07/doc.tex}\clearpage
+\input{08/doc.tex}\clearpage
 %\input{09/doc.tex}
 %\input{10/doc.tex}
 %\input{11/doc.tex}
-\input{12/doc.tex}
+\input{12/doc.tex}\clearpage
 
 \newpage
 
