--- a/latex_docu/12/doc.tex
+++ b/latex_docu/12/doc.tex
@@ -14,26 +14,88 @@ Version & Date & Modified by & Summary of changes\tabularnewline
 
 \subsection{Is Open Data really open?}\label{is-open-data-really-open}
 
-The main feature of Open Data is to be easily available and accessable to everyone. During our research for sources to include and collect data, we had a hard time in finding non-static Open Data. Myriad data sources present their data to the user through a GUI or website, but do not provide the underlying data. Some providers even prohibit the usage and storage of the data for commercial and even private usage outside their platform. Furthermore, the overwhelming amount of disparate protocols to access data in different formats (CSV, XLS, HTML) in which the data is presented and offered makes it hard for the user to benefit from the data. This very reason is the motivation behind creating our system.
+The main feature of Open Data is to be easily available and accessible to everyone.
+During our research for sources to include and collect data, one of our main findings
+was the difficulty in finding the specific type of non-static timeseries
+environmental data in which we were interested. A large portion of data ``sources''
+present their data to the user through a GUI, but do not provide the underlying data.
+Some providers even prohibit the usage and storage of the data for commercial
+and even private usage outside their platform. Furthermore, the overwhelming
+amount of disparate protocols to access data in different formats (CSV, XLS, HTML)
+in which the data is presented and offered makes it hard for the user to benefit
+from the data.
 
-Still, we were able to identify a multitude of available sources and used our system as proof-of-concept to include and provide six of them (see Appendix \ref{} for a list). The "`unlocked"' sources offer different measurands like temperature and river water level.
+Still, we were able to identify a multitude of available sources and used our
+system as proof-of-concept to include and provide seven of them (see the Appendix for a list).
+The ```unlocked'' sources offer different measurands like temperature and river water level.
 
-Though, concluding one must say that nonetheless, a lot of work is to be done when it comes to make Open Data really \textbf{open}.
+Though, concluding one must say that nonetheless, a lot of work is to be done
+when it comes to make Open Data really \textbf{open}.
 
 \subsection{Lessons learned}\label{lessons-learned}
 
-The best way to improve is to learn from mistakes, should they be your own or someone elses. But first you must be aware of challenges and setbacks along the road. To do so, this section will recapitulate the history of the project and discuss the lessons learned.
+The best way to improve is to learn from mistakes, should they be your own or
+someone else's. But first you must be aware of challenges and setbacks along the
+way. To do so, this section will recapitulate the history of the project and
+discuss the lessons learned.
 
-Project teams will always consist of heterogenous people with different skills and understanding of the problem. To get everyone on the same page is a tough challenge and with such strict time restrictions it got even more challenging. Cultural and difference in language profficiency detained us from reaching agreements fast and function as a unit. Furthermore, team members tended to work separately. This in itself is not generally a problem, but in our case, due to lack of communication and synchronization with the rest of the team, led to end-products which sometimes did not work together well, or required significant efforts to integrate and harmonize. Bugs or issues in the individual components were not discovered until late in the process, more specifically until deployment of the whole system. Further, because the infrastructure deployment basically rested on the shoulders of a single member, this created a bottleneck and excessive load on this person. Besides, said challenges the tools established to improve team work and productivity got partially abandoned. Specifically, somewhere around the midpoint of the project timeline most stopped using Trello to keep track of global progess and open todos. Obviously this led to lack of visibility as to what was to be done, and contributed to the general displacement of team members into silos.
+Project teams will always consist of heterogenous people with different skills
+and understanding of the problem. To get everyone on the same page is a difficult
+challenge and with such strict time restrictions, it got even more challenging.
+Cultural and language proficiency differences often prevented us from reaching
+consensus fast and function as a unit. Furthermore, team members tended to work
+separately. This in itself is not generally a problem, but in our case, due to
+lack of communication and synchronization with the rest of the team, led to
+end-products which sometimes did not work together well, or required
+significant efforts to integrate and harmonize.
+
+Because of the lack of cloud infrastructure, testing became a problem, which led to
+bugs or issues in the individual components not being discovered until late in the process, more
+specifically until deployment of the whole system. Further, because the
+infrastructure deployment basically rested on the shoulders of a single member,
+this created a bottleneck and excessive load on this person.
+
+Lastly, the tools which were there to keep order and improve team work and productivity got
+partially abandoned. Specifically, somewhere around the midpoint of the
+project timeline, most team meambers stopped using Trello to keep track of
+global progress and open todos. Obviously this led to lack of visibility as to
+what was to be done, and contributed to the general displacement of team members into silos.
+The latter was in part a consequence of the difficulties in finding consensus;
+as individuals found it difficult to work together, they isolated themselves
+more and more from group work.
 
 \begin{quotation}
-Maslow's hammer: "`when you have a hammer, everything looks like a nail!"'
+  Maslow's hammer: \\
+  \emph{``when you have a hammer, everything looks like a nail!''}
 \end{quotation}
 
-Moreover, we experienced Maslow's hammer first hand. In our case this means that we tried to adjust the problem to our technology rather than vice versa. Concluding, a hug lesson that we learned is to start with a use case and then try to find the perfect solution. For example, when choosing a database technology start with the queries you want to optimize and for which you want to ensure the perfect performance. No system can be the best solution for every given challenge thus, formulate your problem statement specifically and based on this, choose the best fit. Moreover, when the decision for a technology or solution was made, test and benchmark it under real-world conditions rather than conjcture. Though, said approach is hard to implement given the limited time and budget we were given. A different trade-off that has to be made is the time invested in learning new technologies against exploiting existing knowledge and understanding. Typically, in a real-world case a project team is formed of domain experts so that existing knowledge can be harnessed most of the time. In our very unique case, a team formed of diverse university students, the available knowledge and experience with existing solutions might not suffice. Hence, we were presented with problem domains to which we did not have the right solution and expert. This forced us to spend a significant amout of time to research available technologies and services.
+Moreover, we experienced Maslow's hammer first hand. In our case this means
+that we tried to adjust the problem to our technology rather than vice versa.
+Too often, the implementation depended on the developers prior knowledge of a
+given technology, and not as a result of a contentious and reasoned analysis of
+the technologies and tools available, a comparison of what characteristics they
+exhibit under a specific set of criteria based on desired results or use cases, etc.
 
-Finally, never underestimate the overhead of cloud resource procurement and the administration of the infrastructure. Obviously, without available infrastructure testing and benchmarking is not possible thus, decide early in the project where and how to test. It might not be the optimal solution but as the product grows everything can improve.
+Concluding, a huge lesson that we learned is to start with a use case and then
+try to find the best solution. For example, when choosing a database
+technology start with the queries you want to optimize and for which you want
+to ensure the perfect performance. No system can be the best solution for every
+given challenge thus, formulate your problem statement specifically and based
+on this, choose the best fit. Moreover, when the decision for a technology
+or solution was made, test and benchmark it under real-world conditions rather
+than conjecture. Though, said approach is hard to implement given the limited
+time and budget we were given. A different trade-off that has to be made is
+the time invested in learning new technologies against exploiting existing
+knowledge and understanding. Typically, in a real-world case a project team
+is formed of domain experts so that existing knowledge can be harnessed most
+of the time. In our very unique case, a team formed of diverse university
+students, the available knowledge and experience with existing solutions might
+not suffice. Hence, we were presented with problem domains to which we did
+not have the right solution and expert. This forced us to spend a significant
+amount of time to research available technologies and services.
 
-\subsection{Future improvements}\label{future-improvements}
-
-Delete???
+Finally, never underestimate the overhead of cloud resource procurement and
+the administration of the infrastructure. Obviously, without available
+infrastructure testing and benchmarking is not possible thus, decide early
+in the project where and how to test. It might not be the optimal solution
+but as the product grows everything can improve.
