--- a/latex_docu/01/doc.tex
+++ b/latex_docu/01/doc.tex
@@ -68,13 +68,13 @@ We therefore distinguish between static data of the type described above
 project, namely time series data of environmental measurements coming
 from a device (i.e.~a sensor or sensor network) with some form of
 geo-information. For example, an array of air pollution sensors in a
-given city may collect data every at 15-minute intervals; this would be
+given city may collect data at 15-minute intervals; this would be
 represented as individual records containing the timestamp, the sensor's
 geolocation and the air pollution measurement.
 
 \subsection{Motivation}\label{motivation}
 
-\emph{Open data} efforts in the past have focused on providing a
+`Open data' efforts in the past have focused on providing a
 centralized platform onto which data producers can upload their data
 along with some metadata but without much (if any) concern for the
 schema or the format in which the data is offered. This has resulted in
@@ -91,7 +91,7 @@ inherent difficulty in querying data in disparate representations.
 
 Also, as the price of devices declines, more and more enthusiasts are
 willing to share their data to open communities so that it can be used
-and queried by anyone. To tackle these challenges our project centers
+and queried by anyone. To tackle these challenges, our project centers
 around building a prototype which provides:
 
 \begin{itemize}
