--- a/latex_docu/documentation.tex
+++ b/latex_docu/documentation.tex
@@ -66,23 +66,28 @@ firstname.lastname@campus.tu-berlin.de
 	Andres Ardila \& Oliver Bruski
 \end{center}
 
-\keywords{Open Data, Environemental Data, Big Data}
+\keywords{Open Data, Environmental Data, Big Data}
 
 \vspace*{1mm}
 \rule{\textwidth}{1pt}
 \vspace*{1mm}
 
 \begin{abstract}
-Despite a significant push in the past decade to liberate data, the world of
-static environmental "open data" is giving way to the new wave of
-data available from IoT devices. However, despite the large amounts of potentially
-useful data that's available, a platform on which enthusiast and organizations
-alike can donate and liberate their data, and where data scientists can take advantage
-of a way to query and layer all these data in new and unexpected ways is still an
-unrealized dream. With this project, we look at the current state of affairs of
-such static open data platforms, inquire about why they're no longer serving their
-promise of openness and failing in their usability (and therefore usefulness),
-and introduce an early prototype for what such a system would look like if it
+Despite a significant push in the past decade to liberate and make data open
+and accessible, the lack of any sensible means to query such data sets enmasse
+makes their usefulness limited to those interested parties willing to incur the
+cost of data integration. Today, a new wave of environmental data from IoT
+devices is entering the scene; unlike that of previous generations of
+environmental data which were static in time, this data now includes time and
+geoloation information. Despite the large amounts of potentially useful data
+that's becoming available, however, a platform on which enthusiast and
+organizations alike can donate and liberate their data, and where data
+scientists can take advantage of uniform querying in order to layer data from
+different datasets in new and unexpected ways still remains an unrealized utopia.
+With this project, we look at the current state of affairs of such static open
+data platforms, inquire about why they're no longer serving their promise of
+openness and failing in their usability (and therefore usefulness), and
+introduce an early prototype for what such a system would look like if it
 were built with cutting edge cloud technologies.
 \end{abstract}
 \newpage
